force-app/main/default/objects/GPT_Key__mdt/GPT_Key__mdt.object-meta.xml
<CustomObject>
    <label>GPT Key</label>
    <pluralLabel>GPT Keys</pluralLabel>
</CustomObject>