force-app/main/default/objects/GPT_Key__mdt/fields/Max_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Max_Tokens__c</fullName>
    <defaultValue>2048</defaultValue>
    <description>The maximum number of tokens to generate in the completion.

The token count of your prompt plus max_tokens cannot exceed the model&apos;s context length. Most models have a context length of 2048 tokens (except for the newest models, which support 4096).</description>
    <label>Max Tokens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>