force-app/main/default/objects/GPT_Key__mdt/fields/Named_Credentials_Name__c.field-meta.xml
<CustomField>
    <fullName>Named_Credentials_Name__c</fullName>
    <label>Named Credentials Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>