force-app/main/default/objects/GPT_Key__mdt/fields/Temperature__c.field-meta.xml
<CustomField>
    <fullName>Temperature__c</fullName>
    <defaultValue>0.6</defaultValue>
    <description>What sampling temperature to use. Higher values means the model will take more risks. Try 0.9 for more creative applications, and 0 (argmax sampling) for ones with a well-defined answer.

We generally recommend altering this or top_p but not both.</description>
    <label>Temperature</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>