force-app/main/default/objects/GPT_Key__mdt/fields/Top_P__c.field-meta.xml
<CustomField>
    <fullName>Top_P__c</fullName>
    <defaultValue>0</defaultValue>
    <description>An alternative to sampling with temperature, called nucleus sampling, where the model considers the results of the tokens with top_p probability mass. So 0.1 means only the tokens comprising the top 10% probability mass are considered.

We generally recommend altering this or temperature but not both.</description>
    <label>Top_P</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>